--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -8,4 +8,4 @@ metadata:
     # labels are dynamically generated using the "nginx-chart.labels" template.
     # The nindent function indents the label lines for proper formatting.
     {{- include "nginx-chart.labels" . | nindent 4 }}
-{{- end }}
+{{- end }}f
